# RolmOCR-streamlit

./: README.md  pyproject.toml
src/: app.py
